<resources>
    <string name="app_name">הסוכן שלי</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings_user">שלום</string>
    <string name="header_create_user">יצירת לקוח</string>
    <string name="confirm_btn">אישור פרטי לקוח</string>
    <string name="person_default_name">Israel Israeli</string>
    <string name="header_search_for_customer">חיפוש לקוח</string>
    <string name="app_logo_picture">app_logo_picture</string>
    <string name="customer_successfully_created">הלקוח נוצר בהצלחה</string>
    <string name="share_via">שתף באמצעות</string>
    <string name="suits">תביעות</string>
    <string name="status">סטטוס</string>
    <string name="header_insurance_list">רשימת ביטוחים</string>
    <string name="header_new_insurance_requests">בקשות לביטוח חדש</string>
    <string name="enter_customer_name">הקלד שם לקוח…</string>
    <string name="header_customer_new_ins_request">בקשות לביטוחים</string>
    <string name="header_request_ins">בקשות</string>
    <string name="draft">טיוטה</string>
    <string name="header_suit_list">רשימת תביעות</string>
    <string name="mail_header">דואל</string>
    <string name="private_name_at_customer_info_at_agent">שם פרטי</string>
    <string name="last_name_customer_info_at_agent">שם משפחה</string>
    <string name="id_customer_info_at_agent">תעודת זהות</string>
    <string name="phone_number_at_customer_info_at_agent">נייד</string>
    <string name="address_customer_info_at_agent">כתובת</string>
    <string name="update_details_at_customer_info_at_agent">עדכון פרטים</string>
    <string name="retype_password">אימות סיסמה</string>
    <string name="customer_info">פרטי לקוח</string>
    <string name="hint_mail_address">israel.israeli@gmail.com</string>
    <string name="register_header">הרשמה</string>
    <string name="new_doc">חדש</string>
    <string name="suit_instruction_before_header">הנחיות לפני פתיחת תביעה</string>
    <string name="suit_instructions_text_1">לקוח יקר, לפני פתיחת תביעה עליך לוודא שיש בידייך את הפרטים הבאים:</string>
    <string name="suit_instructions_text_2">1. צילום רשיון נהיגה ו/או תעודת זהות של הנהג השני</string>
    <string name="suit_instructions_text_3">2. צילום תעודת ביטוח חובה של הרכב השני</string>
    <string name="suit_instructions_text_4">3. תמונות של הפגיעה על גבי כלי הרכב ( שלך ושל הנהג השני) ותמונות של אזור התאונה</string>
    <string name="suit_instructions_text_5">4. מספר טלפון של הנהג השני</string>
    <string name="collected_all_information_and_willing_to_proceed">אספתי את כל הפרטים ואני מוכן/ה להמשיך</string>
    <string name="instructions_for_new_password">הכנס שם משתמש (אימייל) ולחץ על אישור. בעוד כמה דקות תקבל לכתובת האימייל סיסמה חדשה למערכת. עליך להיכנס עם הסיסמה החדשה.</string>
    <string name="user_name">שם משתמש</string>
    <string name="send_pw_to_email">שלח סיסמה</string>
    <string name="connect">התחברות</string>
    <string name="upload_picture">העלה תמונה</string>
    <string name="upload_next_pictures_header">העלה את כל התמונות הבאות:</string>
    <string name="new_suit_header">תביעה חדשה</string>
    <string name="password">סיסמה</string>
    <string name="first_name">שם פרטי</string>
    <string name="first_name_hint">ישראל</string>
    <string name="last_name">שם משפחה</string>
    <string name="last_name_hint">ישראלי</string>
    <string name="id_headline">תעודת זהות</string>
    <string name="id_headline_hint">111111111</string>
    <string name="phone_number">נייד</string>
    <string name="phone_number_hint">050–1234567</string>
    <string name="address_hint">הזן כתובת מגורים</string>
    <string name="email_headline_hint">israel.israeli@gmail.com</string>
    <string name="password_hint">*********</string>
    <string name="password_headline">סיסמה</string>
    <string name="password_confirmation_headline">אימות סיסמה</string>
    <string name="password_confirmation_headline_hint">*********</string>
    <string name="add_documents_for_customer">הוספת מסמך ללקוח</string>
    <string name="accident_description">תיאור התאונה</string>
    <string name="whos_fault_to_your_opinion">מי לדעתך אשם בתאונה</string>
    <string-array name="state_of_status">
        <item>חדש</item>
        <item>בתהליך</item>
        <item>טופל</item>
    </string-array>
    <string-array name="on_whos_fault">
        <item>אני אשם</item>
        <item>צד ג אשם</item>
        <item>לא ידוע</item>
    </string-array>
</resources>