<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agentPages.AgentRegistration">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">

        <ImageView

            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/my_agent_logo_no_background_img" />

        <TextView
            android:id="@+id/header_home_page_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:backgroundTint="@color/white"
            android:fontFamily="Ariel"
            android:text="@string/register_header"
            android:textColor="@color/teal_700"
            android:textSize="40sp"
            android:gravity="center"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            >


            <LinearLayout
                android:id="@+id/private_name_create_agent_layout"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/private_name_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="שם פרטי"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_private_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="0.6"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="textPersonName"
                    android:hint="ישראל" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/last_name_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="שם משפחה"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_last_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_number_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/id_headline"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_id_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:inputType="number"
                    android:hint="@string/id_headline_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone_number_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_number"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_phone_number_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:inputType="phone"
                    android:hint="@string/phone_number_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mail_address_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mail_header"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_email_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_headline_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/password_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/password_headline"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="12"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/confirmation_password_create_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/password_confirmation_headline"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/reg_agent_confirmation_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:ems="12"
                    android:inputType="textPassword"
                    android:hint="@string/password_confirmation_headline_hint"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="horizontal">



            </LinearLayout>


            <Button
                android:id="@+id/confirm_agent_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/BTN_background_dark"
                android:text="@string/register_header"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:background="@drawable/button_design"
                android:padding="10dp"
                 />
        </LinearLayout>



    </LinearLayout>


    </LinearLayout>
</FrameLayout>