<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userPages.suitPages.SuitSide2CarLicenceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="5"
        >


        <ImageView

            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/my_agent_logo_no_background_img"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/header_home_page_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:backgroundTint="@color/white"
            android:fontFamily="Ariel"
            android:gravity="center"
            android:text="תביעה חדשה"
            android:textColor="@color/teal_700"
            android:textSize="40sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <TextView
            android:id="@+id/suit_instructions_text_1_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="העלה את כל התמונות הבאות:"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/suit_instructions_text_2"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/suit_instructions_text_3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/suit_instructions_text_4" />


    </LinearLayout>
</LinearLayout>